<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Fragment_Agregar_Producto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="437dp"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/fragment_agregar_titulo"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/et_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fragment_agregar_id"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fragment_agregar_nombre"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/et_marca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fragment_agregar_marca"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/et_pesoinicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fragment_agregar_pesoinicio"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/et_pesoactual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fragment_agregar_pesoactual"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/et_caducidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fragment_agregar_caducidad"
            android:inputType="date"
            android:textAlignment="center" />

        <Button
            android:id="@+id/b_agregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_agregar_b_agregar" />
    </LinearLayout>
</FrameLayout>